--- a/_navbar.html
+++ b/_navbar.html
@@ -30,34 +30,59 @@
               <a href="index.html">Carbon Dioxide</a>
             </li>
             <li>
-              <a href="map_ch4.html">Methane</a>
+              <a href="00-map_ch4.html">Methane</a>
             </li>
             <li>
-              <a href="map_pm.html">Particulate Matter</a>
+              <a href="01-map_pm.html">Particulate Matter</a>
             </li>
             <li>
-              <a href="map_o3.html">Ozone</a>
+              <a href="02-map_o3.html">Ozone</a>
             </li>
           </ul>
         </li>
-        <li>
-          <a href="status.html">Status</a>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            Utilities <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <a href="status.html">
+                <i class="fa fa-tachometer fa-fw" aria-hidden="true"></i>
+                Status dashboard
+              </a>
+            </li>
+            <li>
+              <a href="/s/utilities/tech_home/">
+                <i class="fa fa-th fa-fw" aria-hidden="true"></i>
+                Web tools
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li>
+              <a href="03-tank_request.html">
+                <i class="fa fa-cloud fa-fw" aria-hidden="true"></i>
+                Request reference tank
+              </a>
+            </li>
+          </ul>
         </li>
+            
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             Data <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="http://air.utah.edu/s/view/gasview/">
-                <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
-                Interactive time-series
-              </a>
-            </li>
-            <li>
               <a href="http://air.utah.edu/s/view/nerdmobile/">
                 <i class="fa fa-car fa-fw" aria-hidden="true"></i>
                 Nerdmobile mobile lab
+              </a>
+            </li>
+            <li>
+              <a href="http://air.utah.edu/s/view/gasview/">
+                <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
+                Interactive timeseries
               </a>
             </li>
             <li>
@@ -66,20 +91,30 @@
                 TRAX light-rail
               </a>
             </li>
+            <li class="divider"></li>
+            <li>
+              <a href="http://air.utah.edu/s/data/">
+                <i class="fa fa-download fa-fw" aria-hidden="true"></i>
+                Data access
+              </a>
+            </li>
           </ul>
         </li>
+
         <li>
-          <a href="about.html">About</a>
+          <a href="04-about.html">About</a>
         </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="/s/auth/">
-              <i class="fa fa-lock" aria-hidden="true"></i>
-              Sign in
-            </a>
-          </li>
-        </ul>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="/s/auth/">
+            <i class="fa fa-lock" aria-hidden="true"></i>
+            Sign in
+          </a>
+        </li>
+      </ul>
+
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </nav>
