Added iOS app compatibility

--- a/_navbar.html
+++ b/_navbar.html
@@ -15,7 +15,7 @@
         </div>
         <div class="mobileShow">
           <img src="http://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 17px;">
-          ATAQ
+          ATAQ Lab
         </div>
       </a>
     </div><!--/.navbar-header-->
