--- a/_header.html
+++ b/_header.html
@@ -1,1 +1,8 @@
 <script src="https://use.fontawesome.com/4e14d22100.js"></script>
+
+<!-- iOS app compatibility -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-icon" href="http://air.utah.edu/~benfasoli/img/touch-icon-iphone.png">
+<link rel="apple-touch-icon" sizes="76x76" href="http://air.utah.edu/~benfasoli/img/touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="120x120" href="http://air.utah.edu/~benfasoli/img/touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://air.utah.edu/~benfasoli/img/touch-icon-ipad-retina.png">
