Added abb for gases in navbar

--- a/_navbar.html
+++ b/_navbar.html
@@ -27,16 +27,16 @@
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="index.html">Carbon Dioxide</a>
+              <a href="index.html">Carbon Dioxide (CO<sub>2</sub>)</a>
             </li>
             <li>
-              <a href="00-map_ch4.html">Methane</a>
+              <a href="00-map_ch4.html">Methane (CH<sub>4</sub>)</a>
             </li>
             <li>
-              <a href="01-map_pm.html">Particulate Matter</a>
+              <a href="01-map_pm.html">Particulate Matter (PM<sub>2.5</sub>)</a>
             </li>
             <li>
-              <a href="02-map_o3.html">Ozone</a>
+              <a href="02-map_o3.html">Ozone (O<sub>3</sub>)</a>
             </li>
           </ul>
         </li>
@@ -95,7 +95,19 @@
             <li>
               <a href="http://air.utah.edu/s/data/">
                 <i class="fa fa-download fa-fw" aria-hidden="true"></i>
-                Data access
+                Download data
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/benfasoli/lair-proc">
+                <i class="fa fa-refresh fa-fw" aria-hidden="true"></i>
+                Data processing code
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/benfasoli/uataq">
+                <i class="fa fa-registered fa-fw" aria-hidden="true"></i>
+                UATAQ R Package
               </a>
             </li>
           </ul>
