Finalized tank form

--- a/_tank_request_form.html
+++ b/_tank_request_form.html
@@ -28,7 +28,7 @@
 
       <hr>
 
-      <form action="mailto:tankfillrequest@gmail.com" method="post" enctype="text/plain">
+      <form action="mailto:tankfillrequest@gmail.com?subject=TANK%20FILL%20REQUEST" method="post" enctype="text/plain">
         <div class="row">
           <div class="col-lg-12">
             <div class="input-group">
@@ -61,7 +61,7 @@
           <div class="col-lg-12">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-exclamation fa-fw"></i></span>
-              <textarea class="form-control" rows="3" placeholder="Note(s)"></textarea>
+              <textarea class="form-control" name="notes" rows="3" placeholder="Note(s)"></textarea>
             </div>
           </div>
         </div>
