Spacing between tracer and name

--- a/_navbar.html
+++ b/_navbar.html
@@ -27,16 +27,28 @@
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="index.html">Carbon Dioxide (CO<sub>2</sub>)</a>
+              <a href="index.html">
+                <div class="tracer-left">CO<sub>2</sub></div>
+                Carbon Dioxide
+              </a>
             </li>
             <li>
-              <a href="00-map_ch4.html">Methane (CH<sub>4</sub>)</a>
+              <a href="00-map_ch4.html">
+                <div class="tracer-left">CH<sub>4</sub></div>
+                Methane
+              </a>
             </li>
             <li>
-              <a href="01-map_pm.html">Particulate Matter (PM<sub>2.5</sub>)</a>
+              <a href="01-map_pm.html">
+                <div class="tracer-left">PM<sub>2.5</sub></div>
+                Particulate Matter
+              </a>
             </li>
             <li>
-              <a href="02-map_o3.html">Ozone (O<sub>3</sub>)</a>
+              <a href="02-map_o3.html">
+                <div class="tracer-left">O<sub>3</sub></div>
+                Ozone
+              </a>
             </li>
           </ul>
         </li>
