--- a/_header.html
+++ b/_header.html
@@ -1,3 +1,4 @@
+<!-- font awesome icon library -->
 <script src="https://use.fontawesome.com/4e14d22100.js"></script>
 
 <!-- iOS app compatibility -->
@@ -6,3 +7,18 @@
 <link rel="apple-touch-icon" sizes="76x76" href="http://air.utah.edu/~benfasoli/img/touch-icon-ipad.png">
 <link rel="apple-touch-icon" sizes="120x120" href="http://air.utah.edu/~benfasoli/img/touch-icon-iphone-retina.png">
 <link rel="apple-touch-icon" sizes="152x152" href="http://air.utah.edu/~benfasoli/img/touch-icon-ipad-retina.png">
+
+<!-- google analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-71060029-3', 'auto');
+  ga('send', 'pageview');
+</script>
+
+<!-- disable browser caching -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+<meta http-equiv="Pragma" content="no-cache"/>
+<meta http-equiv="Expires" content="0"/>
