--- a/_header.html
+++ b/_header.html
@@ -1,3 +1,8 @@
+
+<!-- define tab title -->
+<!-- <title> UATAQ Lab </title> -->
+<link rel="icon" href="http://utah.edu/favicon.ico">
+
 <!-- font awesome icon library -->
 <script src="https://use.fontawesome.com/4e14d22100.js"></script>
 
