Improved logo positioning

--- a/_navbar.html
+++ b/_navbar.html
@@ -10,7 +10,7 @@
       </button>
       <a class="navbar-brand" href="index.html">
         <div class="mobileHide">
-          <img src="http://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 17px;">
+          <img src="http://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 17px;  position: relative; bottom:2px;">
           Atmospheric Trace gas &amp; Air Quality
         </div>
         <div class="mobileShow">
