Changed R package icon to fa-archive

--- a/_navbar.html
+++ b/_navbar.html
@@ -118,7 +118,7 @@
             </li>
             <li>
               <a href="https://github.com/benfasoli/uataq">
-                <i class="fa fa-registered fa-fw" aria-hidden="true"></i>
+                <i class="fa fa-archive fa-fw" aria-hidden="true"></i>
                 UATAQ R Package
               </a>
             </li>
