Updates to include smaug allocation page

--- a/_navbar.html
+++ b/_navbar.html
@@ -33,19 +33,19 @@
               </a>
             </li>
             <li>
-              <a href="00-map_ch4.html">
+              <a href="map-ch4.html">
                 <div class="tracer-left">CH<sub>4</sub></div>
                 Methane
               </a>
             </li>
             <li>
-              <a href="01-map_pm.html">
+              <a href="map-pm25.html">
                 <div class="tracer-left">PM<sub>2.5</sub></div>
                 Particulate Matter
               </a>
             </li>
             <li>
-              <a href="02-map_o3.html">
+              <a href="map-o3.html">
                 <div class="tracer-left">O<sub>3</sub></div>
                 Ozone
               </a>
@@ -59,8 +59,14 @@
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="status.html">
+              <a href="/s/smaug/">
                 <i class="fa fa-tachometer fa-fw" aria-hidden="true"></i>
+                Smaug allocation
+              </a>
+            </li>
+            <li>
+              <a href="status.html">
+                <i class="fa fa-question-circle-o fa-fw" aria-hidden="true"></i>
                 Status dashboard
               </a>
             </li>
@@ -72,7 +78,7 @@
             </li>
             <li class="divider"></li>
             <li>
-              <a href="03-tank_request.html">
+              <a href="tank-request.html">
                 <i class="fa fa-cloud fa-fw" aria-hidden="true"></i>
                 Request reference tank
               </a>
@@ -126,7 +132,7 @@
         </li>
 
         <li>
-          <a href="04-about.html">About</a>
+          <a href="about.html">About</a>
         </li>
       </ul>
 
