Legacy link in navbar

--- a/_navbar.html
+++ b/_navbar.html
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li>
-              <a href="http://air.utah.edu/s/view/gasview/">
+              <a href="http://air.utah.edu/s/view/meas/">
                 <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
                 Interactive timeseries
               </a>
