Added historic CO2 page

--- a/map-pm25.knit.html
+++ b/map-pm25.knit.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About UATAQ</title>
+<title>UATAQ PM2.5</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -347,41 +347,21 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About UATAQ</h1>
+<h1 class="title toc-ignore">UATAQ PM2.5</h1>
 
 </div>
 
 
 <!-- Ben Fasoli -->
-<div class="container-fluid" style="margin-top: 15px;">
-<div class="panel panel-default span10 offset1">
-<div class="panel-heading">
-<h4 class="panel-title">
-About UATAQ
-</h4>
+<div class="map">
+<div id="htmlwidget-d8b26ea4f341a41335bb" style="width:100%;height:100%;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-d8b26ea4f341a41335bb">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}@2x.png",null,null,{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false,"attribution":"UATAQ, Ben Fasoli. Map tiles from CartoDB and Esri"}]},{"method":"addTiles","args":["http://server.arcgisonline.com/ArcGIS/rest/services/World_Terrain_Base/MapServer/tile/{z}/{y}/{x}",null,null,{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":0.2,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false}]},{"method":"addCircleMarkers","args":[[40.538497,40.208731,40.560644,40.506808,40.143711,40.660395,41.761353,40.294169,40.794386,40.739906,40.480978,40.766189],[-112.069528,-110.8403,-111.645278,-111.403636,-109.4672,-111.89075,-111.822739,-110.009,-111.931925,-111.857831,-111.837047,-111.847672],10,null,null,{"lineCap":null,"lineJoin":null,"clickable":true,"pointerEvents":null,"className":"","stroke":true,"color":["#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080"],"weight":2,"opacity":0.5,"fill":true,"fillColor":["#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080","#808080"],"fillOpacity":0.5,"dashArray":null},null,null,["<b>Daybreak<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:00 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=dbk\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Fruitland<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:00 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=fru\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Hidden Peak<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-11 13:15 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=hdp\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Heber<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:01 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=heb\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Horsepool<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-13 11:04 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=hpl\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Intermountain Medical Center<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:00 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=imc\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Logan<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:00 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=lgn\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Roosevelt<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-15 00:16 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=roo\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Rose Park<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:00 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=rpk\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Sugarhouse<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:15 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=sug\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>Suncrest<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-15 00:16 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=sun\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>","<b>University of Utah<\/b><br>Particulate Matter (PM2.5) :<b> Unknown <\/b> ug/m^3<br>Last updated:   2017-05-14 19:15 MDT<br><a target=\"_blank\" href=\"http://air.utah.edu/s/view/meas/?site_id=wbb\">\n  <button type=\"button\" class=\"btn btn-danger btn-block\"><i class=\"fa fa-line-chart\"><\/i>Go to the data!<\/button>\n<\/a>"],null,null,null,null]},{"method":"addLegend","args":[{"colors":["#FF0000 , #FF6900 9.09090909090909%, #FFC600 27.2727272727273%, #D5FF00 45.4545454545455%, #32FF54 63.6363636363636%, #36EBFF 81.8181818181818%, #0000FF 100%, #0000FF "],"labels":["50","40","30","20","10","0"],"na_color":null,"na_label":"NA","opacity":0.7,"position":"bottomright","type":"numeric","title":"(ug/m^3)","extra":{"p_1":0.0909090909090909,"p_n":1},"layerId":null,"className":"info legend"}]}],"fitBounds":[39.943711,-112.269528,41.961353,-109.2672],"limits":{"lat":[40.143711,41.761353],"lng":[-112.069528,-109.4672]}},"evals":[],"jsHooks":[]}</script>
 </div>
-<div class="panel-body">
-<p>The Utah Atmospheric Trace Gas &amp; Air Quality (UATAQ) lab was started in 2013 as a joint effort between the Global Change and Sustainability Center, the Department of Biology and the Department of Atmospheric Science. The mission of the lab is to collect and analyze long term, high frequency, high precision, and spatially variable trace gas and air quality data with the aim of understanding the spatial distribution and long term trends throughout Salt Lake Valley and Northern Utah. Building on the work of one of the founding members, Dr. Jim Ehleringer, the lab has been responsible for improving and expanding existing networks of instrumentation, developing and implementing new networks with different aims, and building an on campus facility for research, development, and student outreach. UATAQ specializes in the long term measurement of both mobile and in-situ trace gas and criteria pollutants. Our data is calibrated to international standards and we possess numerous years of experience in collecting trace gas data, including one of the longest continuous urban CO2 records in the nation.</p>
-<h4 id="research-information">Research Information</h4>
-<p><a href="http://air.utah.edu/s/archive/aguf2015/">AGU Fall 2015 Presentations</a><br />
-Mobile pollutant measurement platforms (Fasoli), High resolution emissions model comparisons (Mendoza)<br />
-<a href="http://lair.utah.edu">LAIR Home</a><br />
-Land-Atmosphere Interactions Research (LAIR) group home</p>
-<h4 id="people">People</h4>
-<p><a href="http://benfasoli.com">Ben Fasoli</a><br />
-Student Director</p>
-<p><a href="mailto:ryan.bares@utah.edu">Ryan Bares</a><br />
-Research Analyst</p>
-<p><a href="http://lair.utah.edu">John C. Lin</a><br />
-Associate Professor, Atmospheric Sciences</p>
-<p><a href="http://biologylabs.utah.edu/bowling/">Dave Bowling</a><br />
-Associate Professor, Biology</p>
-<p><a href="http://www.biology.utah.edu/people/details.php?id=104">Jim Ehleringer</a><br />
-Distinguished Professor, Biology</p>
-<h4 id="support">Support</h4>
-<p>Funding sources for the lab include the Department of Energy, the National Oceanic and Atmospheric Administration (NOAA), the Global Change and Sustainability Center, and the Sustainable Campus Initative at the University of Utah.</p>
+<div class="mobileHide" style="position:fixed; top: 55px; right: 5px; text-align: left;">
+<p>Last updated: 2017-05-15 00:16 MDT</p>
 </div>
-</div>
+<div class="mobileHide" style="position:fixed; left: 5px; bottom: 5px; text-align: center;">
+<p><a href="http://lair.utah.edu"> <img src="http://air.utah.edu/~benfasoli/img/LAIR_logo.png" style="width: 300px;"> </a> <a href="http://sustainability.utah.edu"> <img src="http://air.utah.edu/~benfasoli/img/SCIF_logo.png" style="width: 150px;"> </a></p>
 </div>
 
 
