--- a/_navbar.html
+++ b/_navbar.html
@@ -98,15 +98,21 @@
               </a>
             </li>
             <li>
+              <a href="http://air.utah.edu/s/view/trax/">
+                <i class="fa fa-train fa-fw" aria-hidden="true"></i>
+                TRAX light-rail
+              </a>
+            </li>
+            <li>
               <a href="http://air.utah.edu/s/view/meas/">
-                <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
+                <i class="fa fa-area-chart fa-fw" aria-hidden="true"></i>
                 Interactive timeseries
               </a>
             </li>
             <li>
-              <a href="http://air.utah.edu/s/view/trax/">
-                <i class="fa fa-train fa-fw" aria-hidden="true"></i>
-                TRAX light-rail
+              <a href="http://air.utah.edu/historic_co2.html">
+                <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
+                Historic timeseries
               </a>
             </li>
             <li class="divider"></li>
