--- a/_navbar.html
+++ b/_navbar.html
@@ -52,7 +52,7 @@
             </li>
           </ul>
         </li>
-        
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             Utilities <span class="caret"></span>
@@ -85,7 +85,7 @@
             </li>
           </ul>
         </li>
-            
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             Data <span class="caret"></span>
@@ -117,7 +117,8 @@
             </li>
             <li class="divider"></li>
             <li>
-              <a href="http://air.utah.edu/s/data/">
+              <!-- <a href="http://air.utah.edu/s/data/"> -->
+              <a href="https://air.utah.edu/data/">
                 <i class="fa fa-download fa-fw" aria-hidden="true"></i>
                 Download data
               </a>
@@ -151,6 +152,6 @@
         </li>
       </ul>
 
-    </div><!--/.nav-collapse -->
-  </div><!--/.container -->
+    </div>
+  </div>
 </nav>
