--- a/_navbar.html
+++ b/_navbar.html
@@ -39,7 +39,7 @@
               </a>
             </li>
             <li>
-              <a href="/historic_co2.html">
+              <a href="/historic-co2.html">
                 <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
                 Historic measurements
               </a>
