Use non-self-contained rendering for HTTPS

--- a/_navbar.html
+++ b/_navbar.html
@@ -8,11 +8,11 @@
       </button>
       <a class="navbar-brand" href="index.html">
         <div class="mobileHide">
-          <img src="http://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 15px;  position: relative; bottom:1px;">
+          <img src="https://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 15px;  position: relative; bottom:1px;">
           Atmospheric Trace gas &amp; Air Quality
         </div>
         <div class="mobileShow">
-          <img src="http://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 16px;">
+          <img src="https://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 16px;">
           ATAQ Lab
         </div>
       </a>
@@ -33,9 +33,15 @@
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="/s/view/meas/">
+              <a href="/s/measurements/">
                 <i class="fa fa-area-chart fa-fw" aria-hidden="true"></i>
                 Interactive timeseries
+              </a>
+            </li>
+            <li>
+              <a href="/s/diagnostics/">
+                <i class="fa fa-flask fa-fw" aria-hidden="true"></i>
+                Measurement diagnostics
               </a>
             </li>
             <li>
@@ -45,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="/s/view/nerdmobile/">
+              <a href="/s/nerdmobile/">
                 <i class="fa fa-car fa-fw" aria-hidden="true"></i>
                 Nerdmobile mobile lab
               </a>
@@ -87,6 +93,12 @@
               <a href="about.html">
                 <i class="fa fa-question-circle fa-fw" aria-hidden="true"></i>
                 About
+              </a>
+            </li>
+            <li>
+              <a href="nerdmobile-rental.html">
+                <i class="fa fa-car fa-fw" aria-hidden="true"></i>
+                Nerdmobile rental
               </a>
             </li>
             <li>
