Adds data download page

--- a/_navbar.html
+++ b/_navbar.html
@@ -77,7 +77,7 @@
             </li>
             <li class="divider"></li>
             <li>
-              <a href="/data/">
+              <a href="/data.html">
                 <i class="fa fa-download fa-fw" aria-hidden="true"></i>
                 Download data
               </a>
