Staging on VM, remove dead links

--- a/_navbar.html
+++ b/_navbar.html
@@ -8,11 +8,11 @@
       </button>
       <a class="navbar-brand" href="index.html">
         <div class="mobileHide">
-          <img src="https://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 15px;  position: relative; bottom:1px;">
+          <img src="https://air.utah.edu/img/utelogo.png" style="height: 15px;  position: relative; bottom:1px;">
           Atmospheric Trace gas &amp; Air Quality
         </div>
         <div class="mobileShow">
-          <img src="https://air.utah.edu/~benfasoli/img/utelogo.png" style="height: 16px;">
+          <img src="https://air.utah.edu/img/utelogo.png" style="height: 16px;">
           ATAQ Lab
         </div>
       </a>
@@ -44,12 +44,12 @@
                 Measurement diagnostics
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a href="/historic-co2.html">
                 <i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>
                 Historic measurements
               </a>
-            </li>
+            </li> -->
             <li>
               <a href="/s/nerdmobile/">
                 <i class="fa fa-car fa-fw" aria-hidden="true"></i>
@@ -75,13 +75,13 @@
                 UATAQ R Package
               </a>
             </li>
-            <li class="divider"></li>
-            <li>
+            <!-- <li class="divider"></li> -->
+            <!-- <li>
               <a href="/data.html">
                 <i class="fa fa-download fa-fw" aria-hidden="true"></i>
                 Download data
               </a>
-            </li>
+            </li> -->
           </ul>
         </li>
         <li class="dropdown">
@@ -111,14 +111,14 @@
         </li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li>
           <a href="/s/auth/">
             <i class="fa fa-lock" aria-hidden="true"></i>
             Sign in
           </a>
         </li>
-      </ul>
+      </ul> -->
 
     </div>
   </div>
