--- a/_navbar.html
+++ b/_navbar.html
@@ -84,7 +84,7 @@
             </li> -->
           </ul>
         </li>
-        <li class="dropdown">
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             Services <span class="caret"></span>
           </a>
@@ -108,7 +108,12 @@
               </a>
             </li>
           </ul>
+        </li> -->
+        
+        <li>
+          <a href="about.html">About</a>
         </li>
+        
       </ul>
 
       <!-- <ul class="nav navbar-nav navbar-right">
